--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "cyberguard-capstone",
 	"private": true,
 	"version": "0.0.0",
+	"license": "MIT",
 	"type": "module",
 	"scripts": {
 		"dev": "vite",
