--- a/backend/package.json
+++ b/backend/package.json
@@ -1,15 +1,13 @@
 {
-  "name": "backend",
+  "name": "cyberguard-backend",
   "version": "1.0.0",
-  "description": "",
-  "main": "db.js",
+  "description": "Backend API for Cyberguard Capstone",
+  "main": "server.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
@@ -17,9 +15,10 @@
     "express": "^5.1.0",
     "express-session": "^1.18.2",
     "jsonwebtoken": "^9.0.2",
-    "mysql": "^2.18.1",
     "mysql2": "^3.15.3",
-    "openai": "^6.9.1",
-    "pg": "^8.16.3"
+    "openai": "^6.9.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
   }
 }
