--- a/amplify.yml
+++ b/amplify.yml
@@ -5,12 +5,12 @@ applications:
       phases:
         preBuild:
           commands:
-            - npm ci             
+            - npm install      
         build:
           commands:
             - npm run build     
       artifacts:
-        baseDirectory: dist     
+        baseDirectory: dist    
         files:
           - '**/*'
       cache:
