--- a/package.json
+++ b/package.json
@@ -1,25 +1,28 @@
 {
-	"name": "cyberguard-capstone",
+	"name": "cyberguard",
 	"private": true,
-	"version": "0.0.0",
+	"version": "1.0.0",
 	"license": "MIT",
 	"type": "module",
 	"scripts": {
 		"dev": "vite",
 		"build": "vite build",
-		"lint": "eslint .",
 		"preview": "vite preview",
 		"start": "node backend/server.js"
 	},
 	"dependencies": {
+		"react": "^19.2.0",
+		"react-dom": "^19.2.0",
+		"react-router-dom": "^7.9.6",
 		"bcrypt": "^6.0.0",
 		"cors": "^2.8.5",
 		"dotenv": "^17.2.3",
 		"express": "^5.1.0",
+		"express-session": "^1.18.2",
+		"jsonwebtoken": "^9.0.2",
+		"mysql2": "^3.15.3",
 		"openai": "^6.9.1",
-		"react": "^19.2.0",
-		"react-dom": "^19.2.0",
-		"react-router-dom": "^7.9.6"
+		"pg": "^8.16.3"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.39.1",
@@ -30,6 +33,7 @@
 		"eslint-plugin-react-hooks": "^7.0.1",
 		"eslint-plugin-react-refresh": "^0.4.24",
 		"globals": "^16.5.0",
-		"vite": "^7.2.4"
+		"vite": "^7.2.4",
+		"nodemon": "^3.1.0"
 	}
 }
